[fixed] code content no visible on ViewArticles screen

--- a/src/styles/scss/base/_fonts.scss
+++ b/src/styles/scss/base/_fonts.scss
@@ -5,8 +5,7 @@
   text-align: start;
   margin-bottom: 10px;
 }
-
-.active a {
+ul li.active a {
   position: relative;
   background: $ppal-gradient;
   background-clip: border-box;
@@ -15,4 +14,12 @@
   color: white;
   font-weight: 400;
   cursor: default;
+}
+pre {
+  display: inline-block;
+  padding: 5px;
+  font-size: 1.4rem;
+  background: #535353;
+  border-radius: 5px;
+  color: #c9c9c9;
 }
